# recipe-items

./: .env.example  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  frontend.py  main.py  pyproject.toml
config/: feature_flags.json
src/: extractor.py  feature_flags.py  scraper.py  utils.py
