[project]
name = "recipe-items"
version = "0.1.0"
description = "Use AI to extract recipe ingredients from recipe websites"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain-openai>=0.3.7",
    "loguru>=0.7.3",
    "openai>=1.65.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "typer>=0.15.2",
]
